1.4/deployment-back.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-backend
  labels:
    task: two
  annotations:
    container: multitool
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      type: backend 
  template:
    metadata:
      labels:
        app: multitool
        type: backend
    spec:
      containers:
        - name: multitool
          image: praqma/network-multitool:alpine-extra
          ports:
            - name: http-multitool
              containerPort: 8080
              protocol: TCP
            - name: https-multitool
              containerPort: 8443
              protocol: TCP
