1.4/deployment-front.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-frontend
  labels:
    task: two
  annotations:
    container: nginx
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      type: frontend 
  template:
    metadata:
      labels:
        app: nginx
        type: frontend 
    spec:
      containers:
        - name: nginx
          image: nginx:1.24.0
          volumeMounts:
            - name:  nginx-index
              mountPath: "/usr/share/nginx/html"
          ports:
            - name: http-nginx
              containerPort: 80
      volumes:
        - name:  nginx-index
          emptyDir: {}
