1.4/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netology-depl0
  labels:
    task: one
  annotations:
    container1: nginx
    container2: multitools
spec:
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: nginx-multitool
  template:
    metadata:
      labels:
        app: nginx-multitool
    spec:
      containers:
        - name: nginx
          image: nginx:1.24.0
          ports:
            - name: web
              containerPort: 80          
        - name: multitool
          image: praqma/network-multitool:alpine-extra
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 8443
              protocol: TCP
