1.4/service-back.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netology-backend
spec:
  selector:
    app: multitool
    type: backend
  type: ClusterIP
  ports:
    - name: multitool
      port: 80
      targetPort: http-multitool
