1.4/service-front.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netology-frontend
spec:
  selector:
    app: nginx
    type: frontend 
  type: ClusterIP
  ports:
    - name: nginx
      port: 80
      targetPort: http-nginx
