1.4/service-np.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc0-np
spec:
  selector:
    app: nginx-multitool
  type: NodePort
  ports:
    - name: nginx
      port: 80
      nodePort: 30080
    - name: multitool
      port: 8080
      nodePort: 31080
