1.4/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netology-svc0
spec:
  selector:
    app: nginx-multitool
  type: ClusterIP
  ports:
    - name: nginx
      port: 9001
      targetPort: 80
    - name: multitool
      port: 9002
      targetPort: 8080
